[package]
name = "rsa_enc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-traits = "0.2.15"
num-bigint = { version = "0.4", features = ["rand"]  }
primer = {git = "https://github.com/Quin-Darcy/primer", branch = "master" }

[profile.dev]
overflow-checks = false

[profile.release]
debug = true
